--- a/Pomodoro/Pomodoro.vcxproj
+++ b/Pomodoro/Pomodoro.vcxproj
@@ -68,12 +68,14 @@
   <ItemGroup>
     <ClCompile Include="ClickButton.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ToDoListBox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClickButton.h" />
+    <ClInclude Include="ToDoListBox.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
