--- a/Pomodoro/Pomodoro.vcxproj.filters
+++ b/Pomodoro/Pomodoro.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="ClickButton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ToDoListBox.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClickButton.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ToDoListBox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
